--- a/Assets/CSS/productlist.css
+++ b/Assets/CSS/productlist.css
@@ -312,83 +312,60 @@ form{
     left: 60px;
     bottom: 10px;
 }
-h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.samoyed-box{
+    border: 1px solid #fff;
+    border-radius: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-left: 70px;
+    margin-right: 70px;
+    box-shadow: #000 0px 0px 2px;
 }
-.details{
+.samoyed-container img{
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+}
+.samoyed-container{
     display: flex;
     padding-left: 70px;
+    padding-right: 70px;
 }
-img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: #11101d 2px solid;
+.samoyed-container ul{
+    position: relative;
+    left: 20px;
+    top: 10px;
 }
-.details ul{
-    padding: 10px;
-}
-.details li{
+.samoyed-container li{
     list-style: none;
+    margin: 5px 0;
 }
-.details a{
+.samoyed-container a{
     text-decoration: none;
     color: #11101d;
 }
-/* .select .select_button{
-    position: absolute;
-    background-color: rgb(163, 162, 162);
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    right: 120px;
-    bottom: 320px;
-}
-.select_option{
-    top: 60%;
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-    transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 200ms ease-in-out 0ms;
-}
-.select_option .form{
-    font-weight: 600;
-    font-size: 15px;
-    color: #333;
-} */
-.open{
-    background-color: rgb(207, 203, 203);
+.samoyed-container button.open{
+    position: relative;
+    border: none;
     border-radius: 50%;
     height: 50px;
     width: 50px;
-    font-size: 30px;
-    position: fixed;
-    right: 100px;
-    top: 350px;
-    border: none;
+    left: 600px;
+    top: 30px;
+    background-color: rgb(201, 198, 198);
     cursor: pointer;
-    opacity: 0.8;
+    box-shadow: #000 0px 0px 2px;
 }
 .form-popup{
     display: none;
     position: fixed;
-    bottom: 300px; 
-    right: 60px;
-    border: 3px solid #f1f1f1;
-    z-index: 9; 
-    background-color: grey;
-    bottom: 310px;
+    bottom: 280px; 
+    right: 140px;
+    border: 1px solid black; 
+    bottom: 300px;
+    background-color: #f1f1f1;
 }
 .form-container{
-    max-width: 100px;
-    padding-right: 0px;
-    padding-top: 0;
-    padding-bottom: 0;
     background-color: white;
 }
 .form-container .more_info{
@@ -398,10 +375,8 @@ img{
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom: 5px;
-    /* opacity: 0.8; */
-    
-}
+    border: 1px solid black;
+} 
 .form-container .delete{
     color: black;
     background-color: #f1f1f1;
@@ -409,10 +384,6 @@ img{
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom: 0px;
-    /* opacity: 0.8; */
-}
-.form-container .more_info:hover, .open:hover{
-    opacity: 1;
+    border: 1px solid black;
 }
 
