--- a/Assets/CSS/setup.css
+++ b/Assets/CSS/setup.css
@@ -219,6 +219,7 @@
     left: 260px;
     width: calc(100% - 260px);
     transition: all 0.5s ease;
+    background-color: white;
 }
 .sidebar.close ~ .home-section{
     left: 78px;
@@ -254,6 +255,7 @@
     padding-left: 150px;
     align-items: center;
     padding-right: 80px;
+    background-color: white;
 }
 .upload input[type = "file"]{
     display: none;
@@ -272,6 +274,7 @@
     top: 200px;
     left:310px;
     cursor: pointer;
+    color: #1c1c6b;
 }
 .upload a{
     position: absolute;
@@ -279,6 +282,7 @@
     left: 250px;
     font-size: 30px;
     cursor: pointer;
+    color: #1c1c6b
 }
 .upload-detail{
     position: relative;
@@ -287,32 +291,32 @@
 .upload input.shop-name{
     position: relative;
     right: 20px;
-    border: none;
+    border: 2px solid black;
     padding-bottom: 30px;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     margin-bottom: 10px;
 }
 .upload .shop-name::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload input.price{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 30px;
 }
 .upload .price::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload input.location{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 50px;
     padding-right: 190px;
     right: 20px;
@@ -321,38 +325,38 @@
 }
 .upload .location::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload input.email{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 30px;
     right: 20px;
     position: relative;
 }
 .upload .email::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload input.phone-no{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 30px;
     margin-bottom: 10px;
 }
 .upload .phone-no::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload input.time{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 30px;
     padding-right: 40px;
     right: 20px;
@@ -361,7 +365,7 @@
 }
 .upload .time::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload-detail2{
@@ -371,33 +375,244 @@
     padding-left: 150px;
     align-items: center;
     padding-right: 80px;
+    padding-bottom: 60px;
+    background-color: white;
 }
 .upload-detail2 input.about-seller{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 150px;
     padding-right: 300px;
 }
 .upload-detail2 .about-seller::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload-detail2 input.shop-description{
-    border: none;
+    border: 2px solid black;
     border-radius: 6px;
-    background-color: rgb(190, 189, 189);
+    background-color: white;
     padding-bottom: 150px;
     padding-right: 300px;
     margin-left: 20px;
 }
 .upload-detail2 .shop-description::placeholder{
     font-weight: bold;
-    color: black;
+    color: #1c1c6b;
     padding-left: 10px;
 }
 .upload-detail3{
+    display: flex;
+    justify-content: center;
+    background-color: white;
+}
+.collapsible{
+    max-width: 1000px;
+    overflow: hidden;
+    font-weight: 500;
+    width: 100%;
+}
+#collapsible-head{
+    display: none;
+}
+.collapsible label{
+    position: relative;
+    font-weight: 600;
+    background: white;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+    color: #1c1c6b;
+    display: block;
+    margin-bottom: 10px;
+    cursor: pointer;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 4px;
+    z-index: 1;
+}
+.collapsible label .bx-chevron-right{
+    content: "";
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 30px;
+    color: black;
+    transition: all 0.3s ease;
+}
+.collapsible input:checked + label .bx-chevron-right{
+    transform: rotate(90deg);
+}
+.collapsible-text{
+    max-height: 1px;
+    overflow: hidden;
+    border-radius: 4px;
+    line-height: 1.4;
+    position: relative;
+    top: -100%;
+    opacity: 0.5;
+    transition: all 0.3s ease;
+    border: 2px solid black;
+}
+.collapsible input:checked ~ .collapsible-text{
+    max-height: 300px;
+    padding-bottom: 25px;
+    background: white;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+    opacity: 1;
+    top: 0
+}
+.collapsible-text h2{
+    margin-bottom: 10px;
+    padding: 15px 15px 0;
+    color: #1c1c6b;
+}
+.collapsible-text form{
+    padding-left: 40px;   
+}
+.collapsible-text a{
+    text-decoration: none;
+    color: #1c1c6b;
+    font-weight: 600;
+}
+.collapsible-text input.cat{
+    position: relative;
+    left: 200px;
+}
+.collapsible-text a.cat1{
+    position: relative;
+    left: 200px;
+}
+.collapsible-text input.bird{
+    position: relative;
+    left: 400px;
+}
+.collapsible-text a.bird1{
+    position: relative;
+    left: 400px;
+}
+.collapsible-text input.fish{
+    position: relative;
+    left: 600px;
+}
+.collapsible-text a.fish1{
+    position: relative;
+    left: 600px;
+}
+
+.upload-detail4{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+.health{
+    max-width: 1000px;
+    overflow: hidden;
+    font-weight: 500;
+    width: 100%;
+}
+.health label{
+    position: relative;
+    font-weight: 600;
+    background: white;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+    color: #1c1c6b;
+    display: block;
+    margin-bottom: 10px;
+    cursor: pointer;
+    padding: 15px;
+    border: 2px solid black;
+    border-radius: 4px;
+    z-index: 1;
+}
+.health label .bx-chevron-right{
+    content: "";
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 30px;
+    color: black;
+    transition: all 0.3s ease;
+}
+#health-and-care{
+    display: none;
+}
+.health input:checked + label .bx-chevron-right{
+    transform: rotate(90deg);
+}
+.health-text{
+    max-height: 1px;
+    overflow: hidden;
+    border-radius: 4px;
+    line-height: 1.4;
+    position: relative;
+    top: -100%;
+    opacity: 0.5;
+    transition: all 0.5s ease;
+    border: 2px solid black;
+}
+.health input:checked ~ .health-text{
+    max-height: 300px;
+    padding-bottom: 25px;
+    background: white;
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+    opacity: 1;
+    top: 0
+}
+.health-text h2{
+    margin-bottom: 10px;
+    padding: 15px 15px 0 30px;
+    color: #1c1c6b;
+}
+.health-text form{
+    padding-left: 15px;
+    padding-right: 15px
+}
+.health-text a{
+    text-decoration: none;
+    color: #1c1c6b;
+}
+.health-text .dewormed{
+    position: relative;
+    left: 200px;
+}
+.health-text .checkup{
+    position: relative;
+    left: 400px;
+}
+.health-text .kit{
+    margin-right: 160px;
+}
+.health-text .social{
+    margin-right: 67px;
+}
+.upload-detail5{
+    display: flex;
+    justify-content: end;
+    padding-right: 140px;
+    padding-top: 80px;
+}
+.upload-detail5 button{
+    border-radius: 6px;
+    margin-right: 20px;
+    padding: 10px 50px;
+    border: none;
+    color: #1c1c6b;
+    font-weight: 700;
+}
+.upload-detail5 button.submit{
+    background-color: greenyellow;
+    cursor: pointer;
+}
+.upload-detail5 button.cancel{
+    background-color: red;
+    cursor: pointer;
+}
+
+
+
+
+/* .upload-detail3{
     display: flex;
     width: 100%;
     padding-top: 50px;
@@ -456,4 +671,4 @@
     cursor: pointer;
     bottom: 10px;
 
-}
+} */
